--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.android.extensions'
 }
 
 android {
@@ -32,6 +33,11 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    android {
+        androidExtensions {
+            experimental = true
+        }
+    }
 
 }
 
@@ -50,6 +56,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01"
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'com.airbnb.android:lottie:5.2.0'
+
 
 
 }
